# masterpiece

./: README.md
CMAKE_Blank_env/: CMakeLists.txt
CMAKE_Blank_env/Application/: CMakeLists.txt
CMAKE_Blank_env/Application/src/: main.cpp
CMAKE_Blank_env/Libraries/Dubbele/: CMakeLists.txt
CMAKE_Blank_env/Libraries/Dubbele/src/: dubbele.cpp  dubbele.h
Project_Broker/: CMakeLists.txt
Project_Broker/Application/: CMakeLists.txt
Project_Broker/Application/src/: Framework.cpp  Framework.h  main.cpp
Project_Broker/Include/: IBroker.h  ILib.h  PBroker.h  lib1.h
Project_Broker/Libraries/Broker/: CMakeLists.txt
Project_Broker/Libraries/Broker/src/: Broker.cpp  Broker.h
Project_Broker/Libraries/Lib1/: CMakeLists.txt
Project_Broker/Libraries/Lib1/src/: lib1.cpp
businesssolutions/: index.html
businesssolutions/css/: style.css
businesssolutions/images/: Thumbs.db
visena/: about.html  blog.html  contact.html  index.html  portfolio.html
